Fix HD ds status scrape; Update PW to 1.14; Add note about running bot from difference display

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ pyenv activate stlpro_playwright
 
 export PYTHONPATH='./:$PYTHONPATH'
 
+#export DISPLAY=:1  # this trick for running app via your ssh client instead of VNC client
+
 export BUYBOT_USERNAME="username"
 export BUYBOT_PASSWORD="password"
 export BASE_URL="localhost:8000"
